--- a/ms.tex
+++ b/ms.tex
@@ -159,7 +159,7 @@ And Any TRES Team Members We Should Add
 Recently, \paperit{} presented a list of 36 planet candidates orbiting
 31 stars in \KT\ \Ci.
 In this paper, we present stellar and planetary properties for all systems.
-We combine archival imaging, ground-based seeing limited survey data, and
+We combine ground-based seeing limited survey data and
 adaptive optics imaging with a detailed transit analysis scheme to confirm
 \Nvalidated\ as planets and identify \Nfp\ as likely false positives.
 Of particular interest is EPIC 201912552, a bright (K=8.9) M2 dwarf
