--- a/table_planets.tex
+++ b/table_planets.tex
@@ -1,6 +1,4 @@
-
 \clearpage
-%\LongTables
 \begin{deluxetable*}{lcccccc}
 \tablewidth{0pt}
 \tabletypesize{\scriptsize}
@@ -14,7 +12,7 @@
 \colhead{$a$ (AU)} &
 \colhead{$T_\mathrm{eq}$ (K)}
 }
-\startdata
+\startdata \\
 $201208431$ & $1$ & $10.0040_{-0.0014}^{+0.0019}$ & $2.31_{-0.18}^{+0.18}$ & $27.6242_{-0.6367}^{+0.5312}$ & $0.0782_{-0.0009}^{+0.0010}$ & $563_{-8}^{+8} $ \\
 $201257461$ & $1$ & $50.2459_{-0.0000}^{+0.0003}$ & $2.22_{-0.06}^{+0.00}$ & $77.7162_{-0.0128}^{+6.0490}$ & $0.2349_{-0.0093}^{+0.0000}$ & $384_{-12}^{+6} $ \\
 $201295312$ & $1$ & $5.6562_{-0.0007}^{+0.0006}$ & $1.96_{-0.19}^{+0.20}$ & $13.2281_{-0.7518}^{+0.8361}$ & $0.0631_{-0.0011}^{+0.0010}$ & $1154_{-37}^{+38} $ \\
@@ -53,8 +51,4 @@ $201912552$ & $1$ & $32.9404_{-0.0024}^{+0.0038}$ & $2.19_{-0.16}^{+0.18}$ & $83
 $201929294$ & $1$ & $5.0084_{-0.0001}^{+0.0001}$ & $8.74_{-0.40}^{+0.34}$ & $16.0728_{-0.4018}^{+0.5695}$ & $0.0515_{-0.0008}^{+0.0008}$ & $843_{-16}^{+14} $ \\
 \enddata
 \tablecomments{blurgh.}
-<<<<<<< HEAD
 \end{deluxetable*}
-=======
-\end{deluxetable*}
->>>>>>> 3404c07e4459247fc3d484a69d9a8469a82017ee
