updated planet properties

--- a/planet_properties.ipynb
+++ b/planet_properties.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -84,9 +84,12 @@
    "source": [
     "def calc_hist(x, w, fmt):\n",
     "    q = triangle.quantile(x, [0.16, 0.5, 0.84], weights=w)\n",
-    "    d = np.diff(q)\n",
-    "    v = (\"{{0:{0}}}_{{{{-{{1:{0}}}}}}}^{{{{+{{2:{0}}}}}}}\"\n",
-    "         .format(fmt).format(q[1], d[0], d[1]))\n",
+    "    mu = np.sum(x * w) / np.sum(w)\n",
+    "    std = np.sqrt(np.sum((x - mu)**2 * w) / np.sum(w))\n",
+    "    v = \"{{0:{0}}} \\pm {{{{{{1:{0}}}}}}}\".format(fmt).format(mu, std)\n",
+    "#     d = np.diff(q)\n",
+    "#     v = (\"{{0:{0}}}_{{{{-{{1:{0}}}}}}}^{{{{+{{2:{0}}}}}}}\"\n",
+    "#          .format(fmt).format(q[1], d[0], d[1]))\n",
     "    return q, v\n",
     "\n",
     "def plot_hist(x, w, nm, units, fmt=\".2f\"):\n",
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +212,7 @@
     "        lnms = samples.ln_M_star\n",
     "        a = np.array(_G * np.exp(2*lnp+lnms)/(4*np.pi*np.pi)) ** (1./3)\n",
     "        \n",
-    "        _, v = calc_hist(a * np.exp(-samples.ln_R_star), w, \".4f\")\n",
+    "        _, v = calc_hist(a * np.exp(-samples.ln_R_star), w, \".2f\")\n",
     "        r.append(v)\n",
     "        \n",
     "        _, v = calc_hist(a / 215.1, w, \".4f\")\n",
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
