--- a/table_planets.tex
+++ b/table_planets.tex
@@ -47,8 +47,10 @@ $201754305$ & $2$ & $7.6206 \pm {0.0010}$ & $2.04 \pm {0.27}$ & $22.38 \pm {0.57
 $201779067$ & $1$ & $27.2430 \pm {0.0002}$ & $37.26 \pm {4.45}$ & $31.71 \pm {1.86}$ & $0.1793 \pm {0.0028}$ & $755 \pm {23} $ \\
 $201828749$ & $1$ & $33.5099 \pm {0.0022}$ & $2.72 \pm {0.70}$ & $51.82 \pm {8.17}$ & $0.1918 \pm {0.0043}$ & $539 \pm {40} $ \\
 $201855371$ & $1$ & $17.9716 \pm {0.0017}$ & $2.19 \pm {0.17}$ & $39.81 \pm {1.00}$ & $0.1175 \pm {0.0018}$ & $481 \pm {8} $ \\
-$201912552$ & $1$ & $32.9412 \pm {0.0031}$ & $2.30 \pm {0.18}$ & $82.23 \pm {5.93}$ & $0.1497 \pm {0.0035}$ & $274 \pm {11} $ \\
-$201929294$ & $1$ & $5.0084 \pm {0.0001}$ & $8.71 \pm {0.43}$ & $16.15 \pm {0.51}$ & $0.0515 \pm {0.0009}$ & $843 \pm {16} $ \\
+$201912552$\tablenotemark{1} & $1$ & $32.9412 \pm {0.0031}$ & $2.30 \pm {0.18}$ & $82.23 \pm {5.93}$ & $0.1497 \pm {0.0035}$ & $274 \pm {11} $ \\
+$201929294$ & $1$ & $5.0084 \pm {0.0001}$ & $8.71 \pm {0.43}$ & $16.15 \pm {0.51}$ & $0.0515 \pm {0.0009}$ & $843 \pm {16} $
 \enddata
-\tablecomments{blurgh.}
+\tablecomments{These values and uncertainties are given by the mean and
+standard deviation of MCMC posterior samplings.}
+\tablenotetext{1}{Parameters inferred from spectroscopic observations.}
 \end{deluxetable*}
